--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,23 @@
 {
   background-color: rgba(229,239,231,255);
 }
+.register-text
+{
+  color: rgb(148, 19, 19);
+}
+.register-text:hover
+{ color: red;
+  transition: 3ms ease-in ;
+
+}
+.login-header 
+{
+  position:relative;
+  z-index: 0;
+}
+.login-container
+{
+  position:relative;
+  z-index: 100;
+ padding-top:10px ;
+}
